update: architecture & core