@@ -2,6 +2,7 @@ package architecture.util;
 
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -26,7 +27,7 @@ public class CodecUtil {
 	public static String encodeURL(String source) {
 		String target;
 		try {
-			target = URLEncoder.encode(source, "UTF-8");
+			target = URLEncoder.encode(source, StandardCharsets.UTF_8);
 		} catch (Exception e) {
 			LOGGER.error("encode url failure", e);
 			throw new RuntimeException(e);
@@ -43,7 +44,7 @@ public class CodecUtil {
 	public static String decodeURL(String source) {
 		String target;
 		try {
-			target = URLDecoder.decode(source, "UTF-8");
+			target = URLDecoder.decode(source, StandardCharsets.UTF_8);
 		} catch (Exception e) {
 			LOGGER.error("decode url failure", e);
 			throw new RuntimeException(e);
